--- a/style.css
+++ b/style.css
@@ -22,18 +22,19 @@ a {
   border: rgb(102 , 95 , 209) 2px solid;
   width: 100%;
   height: 10%;
-  color: #665fd1;
+  color: rgb(102 , 95 , 209);
   text-align: center;
 }
 
 #corpoDaPag {
   height: 80%;
+  display: inline-block;
 }
 
 .listas {
   display: inline-block;
   margin-left: 200px;
-  margin-bottom: 60px;
+  margin-bottom: 36px;
 }
 
 #minha_foto {
@@ -47,7 +48,7 @@ a {
   background-color: rgb(253 , 220 , 92);
   color: rgb(102 , 95 , 209);
   text-align: center;
-  height: 10%;
+  height: 5%;
   margin-top: 5%;
 }
 
