--- a/style.css
+++ b/style.css
@@ -6,10 +6,19 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
   background-color: rgb(0 , 129 , 54);
+  line-height: 1.5;
+  font-size: 28px;
 }
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
