Requisito 6 - Rodapé da página

--- a/style.css
+++ b/style.css
@@ -37,4 +37,12 @@ body {
 
 }
 
+#rodape {
+  background-color: rgb(9 , 145 , 236);
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+}
+
 /* Inherit styles */
