--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background-color: rgb(253 , 251 , 251);
     font-family: sans-serif;
     font-size: large;
+    color: grey;
+    line-height: 25px;
 }
 #cabecalho {
     position: fixed;
