--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
-    background-color: rgb (253, 251, 251);
+    background-color: rgb(253, 251, 251);
 }
 
 #cabecalho{
     top: 0px;
+    position: fixed;
 }
 
 #minha_foto{
