--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 #cabecalho {
   background-color: rgb(37,128,0);
   color: white;
+  padding: 25px;
   position: fixed;
   text-align: center;
   top: 0px;
@@ -25,11 +26,45 @@ main {
 }
 
 img {
-  margin-top: 100px;
+  margin-top: 200px;
+}
+
+h2 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+}
+
+h2 a{
+    text-decoration: none;
+}
+
+#lista {
+    display: inline-block;
+    margin-left: 30px;
+    margin-top: 35px;
 }
 
 section {
   display: inline-block;
+}
+
+#learn {
+  display: inline-block;
+  margin-left: 5%;
+  margin-top: 30px;
+}
+
+.lado-esquerdo {
+  display: inline-block;
+  border: 1px solid black;
+  width: 600px;
+  margin-right: 30px;
+}
+
+aside {
+  border: 1px solid black; 
+  display: inline-block;
+  width: 200px;
 }
 
 footer {
