--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
-    ackground-color: rgb(253, 251, 251);
+    background-color: rgb(253 , 251 , 251);
 }
 
 header {
     position: fixed;
-    margin-top: 0px;
 }
