--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   font-family: monospace, Tahoma;
 }
 
-body {
+body, html {
   background-color: rgb(253 , 251 , 251);
   width: 100%;
   height: 100%;
@@ -24,6 +24,7 @@ a {
   height: 10%;
   color: rgb(102 , 95 , 209);
   text-align: center;
+  border: 3px yellow solid;
 }
 
 #corpoDaPag {
@@ -50,6 +51,7 @@ a {
   text-align: center;
   height: 5%;
   margin-top: 5%;
+  border: 3px yellow solid;
 }
 
 #rodape > h4 {
