[12] Estilizando fontes/Corrigindo[2]

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: 'Franklin Gothic Medium', sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 #cabecalho {
