--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
 #cabecalho{
     position: fixed;
     top: 0px;
-    background-color: green;
-   
+    background-color: green; 
+}
+#aprender{
+    text-align: justify;
+    
 }
