--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
         font-size: 13px;
         padding: 3px;
         font-family: sans-serif;
+        line-height: 20px;
         }
 
         #cabecalho {
