--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ nav {
 }
 
 #titulo h1 {
-  font-family: 'Oxanium', cursive;
+  font-family: "Oxanium", cursive;
   text-align: center;
   text-transform: uppercase;
-  color: rgb(46, 254, 247);
+  color: rgb(46 , 254 , 247);
   margin-top: 25px;
 }
 
@@ -38,10 +38,10 @@ ul {
 
 #nav-btn li a {
   text-decoration: none;
-  color: rgb(1, 223, 215);
-  font-family: 'Oxanium', cursive;
+  color: rgb(1 , 223 , 215);
+  font-family: "Oxanium", cursive;
 }
 
 #nav-btn li a:hover {
-  color: rgb(46, 254, 247);
+  color: rgb(46 , 254 , 247);
 }
