--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 #cabecalho {
   position: fixed;
+  top: 0px;
 }
 
 #apresentacao {
