adicionei link exzterno pro meu linkedin

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 20px;
      }
 
-.footer {
+.rodape {
     margin-top: 40px;
     text-align: center;
     }
@@ -24,5 +24,10 @@ body {
 #minha_foto {
     }
 
-#licoes_aprendidas
+#licoes_aprendidas {
 
+}
+
+#licoes_a_aprender {
+
+}
