--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   font-family: monospace, Tahoma;
 }
 
-body, html {
+body {
   background-color: rgb(253 , 251 , 251);
   width: 100%;
   height: 100%;
@@ -24,7 +24,7 @@ a {
   height: 10%;
   color: rgb(102 , 95 , 209);
   text-align: center;
-  border: 3px yellow solid;
+  border: 3px rgb(253 , 220 , 92) solid;
 }
 
 #corpoDaPag {
