--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+/* 
+#048243 - foggiest jungle green
+#32BF84 - recluse greenish teal
+#CAFFFB - merging light light blue
+*/
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     background-color: rgb(253, 251, 251);
+}
+
+#cabecalho {
+    background-color: #048243;
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    padding: 20px;
+    text-align: center;
 }
