Titulo e correçao top 0px

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
 
 #header {
-    top: opx;
+  margin-top: 0px;
 }
