--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-  background-color: rgb(253,251,251);
+  background-color: rgb(253, 251, 251);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecalho {
-  background-color: rgb(37,128,0);
+  background-color: rgb(37, 128, 0);
   color: white;
   padding: 25px;
   position: fixed;
@@ -13,12 +14,12 @@ body {
 }
 
 nav {
-    text-align: left;
+  text-align: left;
 }
 
 nav li {
-    text-decoration: none;
-    list-style: none;
+  text-decoration: none;
+  list-style: none;
 }
 
 main {
@@ -30,18 +31,18 @@ img {
 }
 
 h2 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 25px;
+  font-family:'Times New Roman', Times, serif;
+  font-size: 25px;
 }
 
-h2 a{
-    text-decoration: none;
+h2 a {
+  text-decoration: none;
 }
 
 #lista {
-    display: inline-block;
-    margin-left: 30px;
-    margin-top: 35px;
+  display: inline-block;
+  margin-left: 30px;
+  margin-top: 35px;
 }
 
 section {
@@ -62,7 +63,7 @@ section {
 }
 
 aside {
-  border: 1px solid black; 
+  border: 1px solid black;
   display: inline-block;
   width: 200px;
 }
