--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body {
   background-color: rgb(253 , 251 , 251);
-
+  overflow: visible;
 }
 
 header {
   position: fixed;
   top: 0;
   color: white;
-  font-family: Work Sans;
+  font-family: Work Sans, sans-serif;
   font-weight: 800;
   text-align: center;
   background-color: teal;
   width: 100%;
+  overflow: visible;
 }
 
 #minha_foto {
@@ -19,4 +20,9 @@ header {
   position: relative;
   top: 100px;
   border-radius: 50%;
+}
+
+main {
+  position: relative; 
+  margin: 0px auto;
 }
