--- a/style.css
+++ b/style.css
@@ -8,13 +8,19 @@ body {
     font-size: 30px;
 }
 #minha_foto {
-    border-radius: 50px;
-    position: absolute;
-    left: 700px;
+    border-radius: 10px;
+    float: left;
+    width: 100px;  
 }
 #headNav{
     float: right;
     position: relative;
     bottom: 80px;
     left: 400px;   
+}
+#main {
+    margin-top: 150px;
+}
+#sectionLearn {
+    display: inline-block;
 }
