--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 #cabecalho {
   position: fixed;
-  top: 0px;
+  top: 0;
   width: 100%;
   background-color: cadetblue;
   color: aliceblue;
