--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: rgb(253, 251,251);
 }
+
+#cabecalho {
+    background-color: #0fa36b;
+    width: 1366px;
+    height: 100px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+#titulo {
+    color: white;
+    text-align: center;
+}
