--- a/style.css
+++ b/style.css
@@ -38,6 +38,27 @@ body{
     border-radius: 60%;
 }
 
+#sobre_mim{
+    text-align: justify;
+    width: 40%;
+    margin: 30px 30px 30px 30px;
+    padding: 30px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#aprendizado{
+    text-align: justify;
+    width: 30%;
+    margin: 30px 30px 30px 30px;
+    padding: 30px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#paragrafos{
+    background-color: yellow;
+}
 *{
     margin: 0px;
 }
