--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: rgb(253 ,251 ,251 );
+  background-color: rgb(253, 251, 251);
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: darkslategray;
+  background-color: #3f96ec;
+  width:100%;
+  text-align: center;
+}
+
+#minha_foto {
+  width: 200px;
+  border-radius: 100%;
 }
