add bg color at footer, add color n font footer

--- a/style.css
+++ b/style.css
@@ -20,7 +20,13 @@ body {
 }
 #main {
     margin-top: 150px;
+    margin-right: 550px;
 }
 #sectionLearn {
     display: inline-block;
+}
+footer {
+    background-color: black;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
