--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@ body {
   position: fixed;
   top: 0;
 }
+
+#minha_foto {
+  width: 100px;
+  border-radius: 50%;
+}
+
+#minhas_infos {
+  margin: 0 auto;
+}
