--- a/style.css
+++ b/style.css
@@ -11,13 +11,33 @@ body {
 
 #cabecalho {
   position: fixed;
+  width: 100%;
+  height: 150px;
   top: 0;
-  background-color: rgb(0 , 129 , 54);
+  background-color: rgb(17, 17, 17);
   line-height: 1.5;
   font-size: 28px;
+  padding-left: 30px;
 }
 
-nav a {
+#cabecalho {
+  color: rgb(44, 206, 125);
+}
+
+#cabecalho ul {
+  list-style: none;
+}
+
+#cabecalho a {
   text-decoration: none;
   color: white;
+  list-style: none;
+}
+
+main {
+  margin-top: 150px;
+}
+
+#minha_foto {
+  margin: 0;
 }
