--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: rgb(253, 251, 251);
+  background-color: rgb(253 , 251 , 251);
 }
 
 #cabecalho {
   position: fixed;
-  top: 0px;
+  top: 0;
   height: 70px;
   background-color: grey;
   padding: 20px;
