--- a/style.css
+++ b/style.css
@@ -1,50 +1,58 @@
 a {
-  text-decoration:none;
-  font-size:18px;
+    text-decoration: none;
+    font-size: 18px;
 }
 
 a:hover {
-  background: rgb(74 , 78 , 105);
-  color:rgb(132, 169, 140);
+    background: rgb(74 , 78 , 105);
+    color: rgb(132 , 169 , 140);
 }
 
 body {
-  padding: 120px 0 0 0;
-  background-color: rgb(253 , 251 , 251);
-  color: rgb(74 , 78 , 105);
-  margin: 0;
+    padding: 120px 0 0 ;
+    background-color: rgb(253 , 251 , 251);
+    color: rgb(74 , 78 , 105);
+    margin: 0;
 }
 
-
 header {
-  background: rgb(132 , 169 , 140);
-  font-size: 18px;
-  height: auto;
-  position: fixed;
-  text-align: center;
-  width: 100%;
-  top: 0;
+    background: rgb(132 , 169 , 140);
+    font-size: 18px;
+    height: auto;
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    top: 0;
 }
 
 header h1 {
- line-height:10px;
+    line-height: 10px;
 }
 
 h2 {
-  text-align:center;
+    text-align: center;
+}
+
+h2::before { 
+  display: block; 
+  content: " "; 
+  margin-top: -110px; 
+  height: 110px; 
+  visibility: hidden; 
+  pointer-events: none;
 }
 
 #minha_foto {
-  border-radius: 150px;
-  max-width: 15%;
-  float: left;
-  
+    border-radius: 150px;
+    margin:auto;
+    display:block;
+    max-width:50%;
 }
 
 .navbar {
-  font-family: monospace;
-  font-size: 16px;
-  padding-top: 10px;
+    font-family: monospace;
+    font-size: 16px;
+    padding-top: 10px;
 }
 
 .navbar li {
@@ -54,11 +62,8 @@ h2 {
   padding: 0 14px;
 }
 
-.listas {
-  display:flex;
-  width:80%;
+.left-sidebar {
+float:left;
+width: 30%;
 }
 
-.listas div {
-  width:50%;
-}
