--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@ body {
 
 #cabecalho {
   position: fixed;
-  margin-top: 0px;
-  
+  background-color: rgb(253, 251, 251)
 }
-
 #minha_foto {
   width: 300px;
+  border: 3px solid aqua;
+  border-radius: 25%;
+  margin-top: 5%;
+}
+
+.list {
+  display: inline-block;
 }
