--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(253 , 251 , 251);
 }
 
-header {
+#cabecalho {
     position: fixed;
     top: 0;
+    left: 0;
 }
+
