Alterando fonte family da página

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(253, 251, 251);
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 #cabecalho {
   margin-top: 0px;
