--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(253, 251, 251);
   font-family: Helvetica, sans-serif;
+  font-size: 1.1em;
 }
 
 #cabecalho {
@@ -36,4 +37,32 @@ body {
 img {
   width: 200px;
   margin-top: 150px;
+  margin-left: 40%;
+  border: 2px solid black;
+}
+
+aside {
+  float: right;
+  width: 40%;
+}
+
+article {
+  float: left;
+  width: 40%;
+}
+
+table {
+  clear: both;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#aprender {
+  float: left;
+  width: 40%;
+}
+
+#aprendidas {
+  float: right;
+  width: 40%;
 }
