--- a/style.css
+++ b/style.css
@@ -12,16 +12,15 @@ body {
 #cabecalho {
   position: fixed;
   width: 100%;
-  height: 150px;
   top: 0;
-  background-color: rgb(17, 17, 17);
+  background-color: #071e3d;
   line-height: 1.5;
   font-size: 28px;
   padding-left: 30px;
 }
 
-#cabecalho {
-  color: rgb(44, 206, 125);
+#cabecalho h1{
+  color: #21e6c1;
 }
 
 #cabecalho ul {
