Cores convertidas de hex para rgb

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 #cabecalho {
-  background-color: #0f9b8e;
+  background-color: rgb(15,155,142);
   position: fixed;
   text-align: center;
   top: 0;
@@ -25,7 +25,7 @@ body {
 }
 
 #links a {
-  color: whitesmoke;
+  color: rgb(255,255,255);
   font-size: 1.2rem;
   padding: 0 20px;
   text-decoration: none;
@@ -35,7 +35,7 @@ body {
 }
 
 main {
-  background-color: #03719c;
+  background-color: rgb(3,113,156);
   padding: 100px;
 }
 
@@ -52,12 +52,12 @@ ul li,ol li {
 }
 
 table,th {
-  border: 1px dotted #343837;
+  border: 1px dotted rgb(52,56,55);
   width: 500px;
 }
 
 #rodape {
-  background-color: #343837;
+  background-color: rgb(52,56,55);
   padding: 10px 0;
   text-align: center;
 }
