--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   width: 100%;
   top: 0;
   background: pink;
-  padding: 20px 20px;
+  padding: 20px;
   text-align: center;
 }
 
@@ -22,12 +22,12 @@ body {
 #minha_foto {
   display: block;
   padding-top: 20px;
-  margin: 120px auto 0 auto;
+  margin: 120px auto 0;
 }
 
 #container_licoes {
   background-color: lightblue;
-  padding: 100px 100px 0 100px;
+  padding: 100px 100px 0;
 }
 
 #container_licoes_aprendidas {
